--- a/static/styles/product_index.css
+++ b/static/styles/product_index.css
@@ -62,8 +62,10 @@
   height: 226px;
   overflow: hidden;
 }
-.page-item-img {
+.pdt-item-img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .pdt-item-img:hover {
   transform: scale(1.1) ;
