--- a/static/styles/product_detail.css
+++ b/static/styles/product_detail.css
@@ -282,47 +282,47 @@
 }  
 
 /* 추천 탭 */
-.pdt-item {
+#pdt-recommend .pdt-item {
   position: relative;
   padding: 1rem;
   height: 100%;
 }
-.pdt-item-img-wrap {
+#pdt-recommend .pdt-item-img-wrap {
   display: inline-block;
   width: 100%;
   height: 226px;
   overflow: hidden;
 }
-.pdt-item-img {
+#pdt-recommend .pdt-item-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.pdt-item-img:hover {
+#pdt-recommend .pdt-item-img:hover {
   transform: scale(1.1) ;
   transition: all 0.7s;
 }
-.pdt-item-name {
+#pdt-recommend .pdt-item-name {
   display: block;
   margin: 1rem 0 0.5rem 0;
   font-size: 0.9rem;
   text-align: center;
 }
-.pdt-item-name:hover {
+#pdt-recommend .pdt-item-name:hover {
   color: var(--main-sub);
 }
-.pdt-item-price {
+#pdt-recommend .pdt-item-price {
   text-align: center;
 }
-.before-sale {
+#pdt-recommend .before-sale {
   color: var(--line);
   font-size: 0.9rem;
 }
-.pdt-pay {
+#pdt-recommend .pdt-pay {
   color: var(--highlight);
   font-size: 0.9rem;
 }
-.pdt-sale-badge {
+#pdt-recommend .pdt-sale-badge {
   position: absolute;
   top: 1rem;
   right: 1rem;
