검색 페이지 class 추가

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -29,7 +29,7 @@
           {{ product.category }}
         </a>
         {% elif product.category == '파일/바인더' %}
-        <a href="{% url 'product:file' %}">
+        <a href="{% url 'products:file' %}">
           {{ product.category }}
         </a>
         {% endif %}
