--- a/products/templates/products/search.html
+++ b/products/templates/products/search.html
@@ -13,7 +13,7 @@
     {% for product in search_list %}
       <article class='col'>
         <div class='pdt-item'>
-          <a href="{% url 'products:products_detail' product.pk %}">
+          <a class='pdt-item-img-wrap' href="{% url 'products:products_detail' product.pk %}">
             <img class='pdt-item-img' src="{{ product.product_image.all.0.image.url }}" alt="">
           </a>
           <a class='pdt-item-name' href="{% url 'products:products_detail' product.pk %}">
