--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -66,12 +66,15 @@
 #review-area .rev-sec .rev-prof-img {
 	border-radius: 50%;
 	height: 100%;
-	min-width: 50px;
+	min-width: 60px;
+	min-height: 60px;
+	max-width: 60px;
 	overflow: hidden;
 	margin-right: 2rem;
 }
 #review-area .rev-sec .rev-prof-img img {
 	width: 100%;
+	height: 100%;
 }
 #review-area .rev-sec .rev-main .rev-header {
 	position: relative;
@@ -218,14 +221,15 @@
 #review .review-form .rate-stars input:checked ~ label {
 	color: var(--rate);
 }
-
+#review .review-form .review-txt input,
 #review .review-form .review-txt textarea,
 #qna .qna-form .qna-txt textarea {
-	border: 1px solid var(--line);
+	border: 1px solid var(--main);
 	border-radius: 0.2rem;
 	padding: 0.3rem 0.5rem;
 	background: var(--gr);
 	width: 100%;
+	margin-top: 1rem;
 }
 
 #review .review-form .review-img span {
@@ -250,6 +254,7 @@
 #review .review-form .review-img input[type="file"] {
 	display: none;
 }
+#review .review-form .review-txt input:focus,
 #review .review-form .review-txt textarea:focus,
 #review .review-form .review-txt textarea:active,
 #qna .qna-form .qna-txt textarea:focus,
