--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="{% static 'script/script.js' %}"></script>
-  {% block css %}{% endblock css %}
+
 </head>
 
 <body>
@@ -62,7 +62,7 @@
             </li>
             {% endif %}
             <li>
-              <a href="#">장바구니</a>
+              <a href="{% url 'cart:cart_detail' %}">장바구니</a>
             </li>
           </ul>
         </div>
