평점 평균 오류 수정

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -98,7 +98,7 @@
               <i class="bi bi-star-fill"></i>
               <i class="bi bi-star-fill"></i>
             </div>
-            <div class='stars-color' data-avg-grade='{{ total.review_avg|floatformat }}'>
+            <div class='stars-color' data-avg-grade='{{ total.review_avg }}'>
               <i class="bi bi-star-fill"></i>
               <i class="bi bi-star-fill"></i>
               <i class="bi bi-star-fill"></i>
